--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,5 +3,10 @@
   "cart": "Cart",
   "total_price": "Total Price: {price}",
   "change_language": "Change Language",
-  "change_color": "change color"
+  "change_color": "change color",
+  "remove":"remove",
+  "price":"price",
+  "add_to_cart":"add to cart",
+  "shopping_cart":"Shopping Cart",
+  "product_list":"Product List"
 }
