--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -8,7 +8,9 @@
   "price":"قیمت",
   "add_to_cart":"افزودن به سبد خرید",
   "shopping_cart":"سبد خرید فروشگاه",
-  "product_list":"لیست محصولات"
+  "product_list":"لیست محصولات",
+  "English": "انگلیسی",
+  "فارسی": "فارسی"
 }
 
   
